# rust_sdl2_opengl_example

./: .gitignore  Cargo.toml  README.md
assets/: .gitignore
src/: fn.py  main.rs
src/config/: video.rs
src/entities/: mod.rs  triangle.rs
src/traits/: mod.rs  update.rs
